# parasail-rs

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  flake.nix  rust-toolchain.toml
.github/workflows/: CI.yml  release.yml  test.yml
src/: error.rs  lib.rs  prelude.rs
src/aligner/: error.rs  mod.rs
src/aligner/alignment/: error.rs  mod.rs  table.rs
src/alignment/: error.rs  mod.rs  table.rs
src/matrix/: error.rs  mod.rs
src/profile/: error.rs  mod.rs  profile_creator.rs
tests/: pssm.txt  square.txt  test_aligner.rs  test_matrix.rs  test_parasail.rs  test_profile.rs  test_scoring_matrices.rs
