[package]
name = "parasail-rs"
version = "0.7.9"
edition = "2021"
authors = ["Nicolas S. Buitrago <nsb5@rice.edu>"]
description = "Rust bindings and wrapper for parasail, a SIMD C library for pairwise sequence alignment."
keywords = ["bioinformatics", "alignment", "parasail", "rust", "ffi"]
license = "BSD-3-Clause"
repository = "https://github.com/nsbuitrago/parasail-rs"
documentation = "https://docs.rs/parasail-rs"

[dependencies]
libc = "0.2.172"
libparasail-sys = "0.1.11"
log = "0.4.27"
thiserror = "1.0.69"
