[package]
name = "parasail-rs"
version = "0.9.0"
edition = "2021"
authors = ["Nicolas S. Buitrago <nsb5@rice.edu>"]
description = "Rust bindings and wrapper for parasail, a SIMD C library for pairwise sequence alignment."
keywords = ["bioinformatics", "alignment", "parasail", "rust", "ffi"]
license = "BSD-3-Clause"
repository = "https://github.com/nsbuitrago/parasail-rs"
documentation = "https://docs.rs/parasail-rs"

[dependencies]
bitflags = "2.10.0"
derive_more = { version = "2.0.1", features = ["from"] }
libc = "0.2.174"
libparasail-sys = "0.1.12"
log = "0.4.27"
thiserror = "2.0.12"
